--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="./assets/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/img/icon-maia.png">
   </head>
   <body>
     <app-root></app-root>
